@@ -25,6 +25,7 @@
 			<label index="fe_users.tx_community_aboutme">About Me</label>
 			<label index="fe_users.tx_community_instantmessager">Instant Messager</label>
 			<label index="fe_groups.tx_community_admins">Admins</label>
+			<label index="fe_groups.tx_community_members">Members</label>
 			<label index="tx_community_acl_role">ACL Role</label>
 			<label index="tx_community_acl_role.name">Name</label>
 			<label index="tx_community_acl_role.is_public">Public Role</label>
